--- a/config-dev.yml
+++ b/config-dev.yml
@@ -2,7 +2,7 @@
 spring:
   datasource:
     type: com.alibaba.druid.pool.DruidDataSource      #当前数据源操作类型
-    driver-class-name: com.mysql.cj.jdbc.Driver        #mysql驱动包
+    driver-class-name: com.mysql.cj.jdbc.Driver111        #mysql驱动包
     url: jdbc:mysql://192.168.56.109:3306/springcloud?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=GMT%2B8
     username: root
     password: 123456
